# Lumina

./: .gitignore  API测试文档.md  CHANGELOG.md  Claudelike.html  Lumina计划.md  README.md  运行指南.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/auth/: mod.rs  models.rs
backend/src/chat_history/: mod.rs
backend/src/config/: mod.rs
backend/src/handlers/: mod.rs
backend/src/models/: mod.rs
backend/src/ollama/: client.rs
backend/src/routes/: mod.rs
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: chat_models.dart
frontend/lib/screens/: chat_screen.dart  history_screen.dart  login_screen.dart  register_screen.dart
frontend/lib/services/: api_service.dart
frontend/lib/theme/: app_theme.dart
frontend/lib/widgets/: chat_bubble.dart  markdown_latex_widget.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
